# marketting-dashboard

./: .gitignore  README.md  fix-completion-node.cjs  fix-completion-node.mjs  fix-limit-node.cjs  get-data-for-marketting-dashboard.json  google-analytics-dev-overview.md  n8n-workflow-ga4.json  package-lock.json  package.json  supabase-schema-ga4.sql  supabase-schema-gsc.sql
.claude/: settings.local.json
agent/: .dockerignore  Dockerfile  agent_config.py  main.py  pyproject.toml  requirements.txt  supabase_client.py
app/: globals.css  layout.tsx  page.tsx
app/api/analytics/: route.ts
app/api/chat/: route.ts
app/api/properties/: route.ts
app/api/refresh/: route.ts
components/chat/: ChatDrawer.tsx  ChatInput.tsx  ChatMessageContent.tsx  ChatMessageList.tsx  ChatSessionList.tsx  ChatView.tsx
components/dashboard/: DashboardShell.tsx  DateRangePicker.tsx  EmptyState.tsx  Header.tsx  LoadingOverlay.tsx  PropertySelector.tsx  RefreshButton.tsx  SiteSelector.tsx  SourceTabs.tsx
components/dashboard/ga4/: DeviceGeoSection.tsx  EcommerceSection.tsx  KPIGrid.tsx  (+3 more)
components/ui/: badge.tsx  card.tsx  skeleton.tsx
hooks/: useChat.ts  useGA4Data.ts  useGSCData.ts  useGSCRefresh.ts  useGSCSites.ts  useProperties.ts  useRefresh.ts  useSemrushBacklinks.ts  useSemrushData.ts  useSemrushProjects.ts  useSemrushRefresh.ts
lib/: parseAgentResponse.ts  refreshJobs.ts  types.ts  utils.ts
n8n/: get-data-for-marketting-dashboard (1).json  gsc-fetch-data-workflow.json  gsc-list-sites-workflow.json  n8n-workflow-ga4.json
supabase/: chat_tables.sql  semrush_tables.sql
(+26 files in other folders)
